# qkan

./: .buildinfo  .gitignore  CNAME  LICENSE  MANIFEST.in  Makefile  README.md  _headers  api.html  bench_cute_vs_flash_cutile.py  bench_cutile.py  bench_gpt2_cute.py  examples.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-exp.txt  requirements.txt  search.html  searchindex.js  setup.py  solver_guide.html
.github/workflows/: _build.yml  docs.yml  lint.yml  publish.yml
_modules/: index.html
_modules/qkan/: feynman.html  info.html  kan.html  qkan.html  solver.html  torch_qc.html  utils.html
_modules/qkan/daruan/: daruan.html
_modules/qkan/solver/: _mitigation.html  cudaq_solver.html  cutile.html  cutn.html  flash.html  qiskit_solver.html  qml.html  torch_exact.html
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  intro.rst.txt
_sources/examples/: gqkan_gpt.ipynb.txt  qkan2kan.ipynb.txt
_sources/intro/: qkan.ipynb.txt
csrc/: cute_activations.cu  cute_kernels.cu  cute_linear.cu
datasets/: .gitignore  README.md  download_cifar10.sh  download_cifar100.sh  download_mnist.sh  download_tinyshakespeare.sh  download_webtext.sh
docs/: api.rst  conf.py  examples.rst  index.rst  solver_guide.rst
docs/examples/: .gitignore  ansatz_comparison.ipynb  download_webtext.sh  gqkan_gpt.ipynb  hqkan_cifar100.ipynb  mnist.ipynb
docs/intro/: qml.ipynb
examples/: ansatz_comparison.html  gqkan_gpt.html  hqkan_cifar100.html  layer_ext.html  layer_ext.ipynb  mnist.html  qkan2kan.html
intro/: kan.html  kan.ipynb  qkan.html  qml.html
scripts/: build_wheels.sh
src/qkan/: __init__.py  _kernel_utils.py  cute_linear.py  cute_ops.py  cutile_activations.py  cutile_linear.py  cutile_ops.py  feynman.py  flashQKAN.py  fourier_kan.py  fp8.py  fused_ops.py  inference.py  info.py  kan.py  linear.py  qkan.py  qsolver.py  solver.py  torch_qc.py  triton_activations.py  triton_linear.py  utils.py
src/qkan/csrc/: cute_kernels.cu
src/qkan/daruan/: __init__.py  daruan.py  torch_qc.py
src/qkan/solver/: __init__.py  _activation.py  _base.py  _mitigation.py  _utils.py  cudaq.py  cudaq_solver.py  cute.py  cute_activation.py  cutile.py  cutile_activation.py  cutn.py  exact.py  flash.py  qiskit.py  qiskit_solver.py  qml.py  torch_exact.py  triton_activation.py
whl/: index.html
whl/qkan/: index.html  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp310-cp310-linux_aarch64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp311-cp311-linux_aarch64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp312-cp312-linux_aarch64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp313-cp313-linux_aarch64.whl  qkan-0.2.2+cu12torch2.10cxx11abiTRUE-cp313-cp313-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiFALSE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiFALSE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiFALSE-cp313-cp313-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiTRUE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiTRUE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiTRUE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.6cxx11abiTRUE-cp313-cp313-linux_x86_64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp310-cp310-linux_aarch64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_aarch64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_aarch64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp313-cp313-linux_aarch64.whl  qkan-0.2.2+cu12torch2.7cxx11abiTRUE-cp313-cp313-linux_x86_64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp310-cp310-linux_aarch64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp311-cp311-linux_aarch64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_aarch64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_aarch64.whl  qkan-0.2.2+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp310-cp310-linux_aarch64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp310-cp310-linux_x86_64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp311-cp311-linux_aarch64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp311-cp311-linux_x86_64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_aarch64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl  qkan-0.2.2+cu12torch2.9cxx11abiTRUE-cp313-cp313-linux_aarch64.whl  (+102 more)
