[build-system]
requires = ["setuptools>=49.4.0", "torch>=2.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "qkan"
authors = [{name = "Jiun-Cheng Jiang", email = "jcjiang@phys.ntu.edu.tw"}]
description = "Quantum-inspired Kolmogorov Arnold Networks"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
dependencies = [
  "torch>=2.0",
  "tqdm",
  "matplotlib"
]

[project.optional-dependencies]
flash = [
    "triton>=3.0",
]

cutile = [
    "cuda-tile",
]

cutn-cu12 = [
    "cuquantum-cu12",
]

cutn-cu13 = [
    "cuquantum-cu13",
]

# Legacy alias — defaults to cu13 to match the [gpu] meta-extra.
cutn = [
    "qkan[cutn-cu13]",
]

qml = [
    "pennylane>=0.37",
]

qiskit = [
    "qiskit>=2.0",
    "qiskit-ibm-runtime>=0.30",
]

cudaq = [
    "cuda-quantum",
]

real-device = [
    "qkan[qiskit,cudaq]",
]

dev = [
    "mypy",
    "ruff",
    "isort",
    "build",
    "setuptools",
    "wheel",
    "twine",
]

doc = [
    "sphinx>=8.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "jupyter",
    "qiskit[visualization]>=2.0",
    "transformers",
    "torchvision",
]

# CuTe extras: pull NVIDIA runtime wheels matching the CUDA family the
# pre-built `qkan._C` was linked against. The kernel itself only calls
# cudart, but torch's ATen/cuda/CUDAContext.h transitively pulls in
# cusparse / cublas, and torch 2.7/2.8 arm64 wheels dynamically link
# libnvJitLink without bundling it — so we must declare these here.
# Bare names: let pip pick the latest patch in the cu12/cu13 family.
cute-cu12 = [
    "ninja",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nvjitlink-cu12",
]

cute-cu13 = [
    "ninja",
    "nvidia-cuda-runtime-cu13",
    "nvidia-cuda-nvrtc-cu13",
    "nvidia-cublas-cu13",
    "nvidia-cusparse-cu13",
    "nvidia-nvjitlink-cu13",
]

# Legacy alias — defaults to cu13 to match the [gpu] meta-extra. Kept so
# `pip install qkan[cute]` keeps working for older install scripts.
cute = [
    "qkan[cute-cu13]",
]

gpu = [
    "qkan[flash,cutile,cutn-cu13,cute-cu13]",
]

all = ["qkan[gpu,qml,dev,doc]"]

[project.urls]
Homepage = "https://github.com/Jim137/qkan"

# Version resolution: `dynamic = ["version"]` in [project] tells setuptools
# the version is supplied elsewhere. setup.py's setup(version=...) then
# provides it, and QKAN_LOCAL_VERSION is appended at build time.
# We intentionally do NOT use `[tool.setuptools.dynamic] version.attr` here
# because that path ignores QKAN_LOCAL_VERSION and bakes only the plain
# __version__ string into wheel metadata, causing pip to reject wheels with
# local-tagged filenames.

[tool.ruff]
lint.select = ["F", "I"]
